--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Your Favorite Source of Free Bootstrap Themes</h1>
+            <h1>Perfect Pitch</h1>
             <hr>
-            <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+            <p>Perfect Pitch, is an initiative geared towards equipping budding entrepreneurs with the necessary skills of problem identification, solving and pitching ideas to potential investors. The event solves the challenge entrepreneurs have of access to investors. Perfect Pitch, is a two hour event hosted at the end of every month, in academic institutions.</p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
         </div>
     </div>
