--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,9 +4,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="PitchLinkX">
 
-    <title>Creative - Start Bootstrap Theme</title>
+    <title>PitchLinkX</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -18,6 +18,7 @@
 
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="css/animate.min.css" type="text/css">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/main.css" type="text/css">
