--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,7 @@
         <div class="header-content-inner">
             <h1>PitchLinkX</h1>
             <hr>
-            <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+            <a href="#about" class="btn btn-primary btn-xl page-scroll">What is PitchLinkX</a>
         </div>
     </div>
 </header>
