--- a/_includes/basic.html
+++ b/_includes/basic.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>Thin HTML5 Coming Soon Template</title>
+	<title>PitchLinkx</title>
 	<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
 	<link rel="stylesheet" href="css/flexi-background.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="css/ml-coming-soon.css" type="text/css" media="screen" />
@@ -19,7 +19,7 @@
 		function mlCountdown() {
 		// Step 1: Make sure to call jQuery in your <head>
 		// Step 2: Fill in the following two variables
-			var eventTime = '1451606400'; // Unix Event Time - Get your stamp from http://www.unixtimestamp.com/index.php
+			var eventTime = '1457740800'; // Unix Event Time - Get your stamp from http://www.unixtimestamp.com/index.php
 			
 			var startFrom = 'D'; // Adjust from which time unit you'd like to countdown: Use D for days, H for hours, M for minutes, or S for seconds.
 			
@@ -97,19 +97,18 @@
 		</div>
 	</header>
 	<div class="wrapper">
-		<h2>Something New is Coming Soon</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam consequat sagittis aliquam. Fusce ligula arcu, porttitor eget congue a, posuere non urna. Ut vitae ipsum sed metus egestas accumsan non sed nibh.</p>
+		<h2>PitchLinkX will Return Soon</h2>
+		<p>Hello There!Thank you for stopping by. Unfortunately we are still doing some renovating an we are close to finishing. In the meantime ke ep in touch with us via our social media channels bellow.</p>
 		<div class="connect">
 			<form>
 				<input type="text" onclick="this.value='';" onfocus="this.select()" onblur="this.value=!this.value?'Email Address':this.value;" value="Email Address" class="main-color-text"  />
 				<input type="button" value="Sign Up" /><br style="clear: both;" />
 			</form>
 			<ul>
-				<li class="facebook"><a href="#">Facebook</a></li>
-				<li class="twitter"><a href="#">Twitter</a></li>
-				<li class="google"><a href="#">Google</a></li>
+				<li class="facebook"><a href="https://www.facebook.com/PitchLinkx-922416367841446/">Facebook</a></li>
+				<li class="twitter"><a href="https://twitter.com/pitchlinkx">Twitter</a></li>
+				<li class="google"><a href="https://plus.google.com/u/1/113585877012002666453/">Google</a></li>
 				<li class="instagram"><a href="#">Instagram</a></li>
-				<li class="sharethis"><a href="#">ShareThis</a></li>
 			</ul>
 		</div>
 	</div>
