--- a/_includes/basic.html
+++ b/_includes/basic.html
@@ -98,12 +98,9 @@
 	</header>
 	<div class="wrapper">
 		<h2>PitchLinkX will Return Soon</h2>
-		<p>Hello There!Thank you for stopping by. Unfortunately we are still doing some renovating an we are close to finishing. In the meantime ke ep in touch with us via our social media channels bellow.</p>
+		<p>Hello There!Thank you for stopping by. Unfortunately we are still doing some renovating an we are close to finishing. In the meantime ke ep in touch with us via our social media channels below.</p>
 		<div class="connect">
-			<form>
-				<input type="text" onclick="this.value='';" onfocus="this.select()" onblur="this.value=!this.value?'Email Address':this.value;" value="Email Address" class="main-color-text"  />
-				<input type="button" value="Sign Up" /><br style="clear: both;" />
-			</form>
+		
 			<ul>
 				<li class="facebook"><a href="https://www.facebook.com/PitchLinkx-922416367841446/">Facebook</a></li>
 				<li class="twitter"><a href="https://twitter.com/pitchlinkx">Twitter</a></li>
