--- a/css/ml-coming-soon.css
+++ b/css/ml-coming-soon.css
@@ -20,7 +20,7 @@ html {
 
 body {
 	background-color: #444;
-	background-image: url(../images/blurred-bg.jpg);
+	background-image: url(../img/header.png);
 }
 
 ::selection {
