--- a/_includes/countdown.html
+++ b/_includes/countdown.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>Thin HTML5 Coming Soon Template</title>
+	<title>PitchLinkX</title>
 	<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
 	<link rel="stylesheet" href="css/flexi-background.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="css/ml-coming-soon.css" type="text/css" media="screen" />
