--- a/_includes/basic.html
+++ b/_includes/basic.html
@@ -93,7 +93,9 @@
 	<script src="js/flexi-background.js" type="text/javascript" charset="utf-8"></script>
 	<header>
 		<div class="wrapper">
-			<h1>In Progress</h1>
+		<h2>PitchLinkX will Return Soon</h2>
+		<p>Hello There!Thank you for stopping by. Unfortunately we are still doing some renovating an we are close to finishing. In the meantime ke ep in touch with us via our social media channels below.</p>
+	
 		</div>
 	</header>
 	<div class="wrapper">
