--- a/_includes/basic.html
+++ b/_includes/basic.html
@@ -106,6 +106,7 @@
 				<li class="twitter"><a href="https://twitter.com/pitchlinkx">Twitter</a></li>
 				<li class="google"><a href="https://plus.google.com/u/1/113585877012002666453/">Google</a></li>
 				<li class="instagram"><a href="#">Instagram</a></li>
+				<li class="sharethis"><a href="#">ShareThis</a></li>
 			</ul>
 		</div>
 	</div>
